[package]
name = "rex-sm"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/knox-networks/rex-sm"
description = "Hierarchical state machine"
license = "MIT"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[lib]
name = "rex"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bigerror = "0.9.0-alpha"
dashmap = "5"
futures = "0.3"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-test = "0.2"
uuid = { version = "1", features = ["v4"] }
# cargo add async-trait dashmap bigerror futures thiserror tokio-stream tracing tracing-test uuid
# cargo add tokio --features sync,time
