[package]
name = "rex-sm"
version = "0.5.1"
edition = "2021"
description = "Hierarchical state machine"
license = "MIT"

[lib]
name = "rex"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base36 = "0.0.1"
bigerror = ">=0.8"
dashmap = "5"
futures = "0.3"
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-test = "0.2"
uuid = { version = "1", features = ["v4"] }
# cargo add async-trait dashmap bigerror futures thiserror tokio-stream tracing tracing-test uuid
# cargo add tokio --features sync,time
